--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav">
-                    <li><a href="https://github.com/everit-org" target="_blank">Sources</a>
+                    <li><a href="https://github.com/everit-org/jira-timetracker-plugin" target="_blank">Source</a>
                     </li>
                     <li><a href="http://www.everit.org/" target="_blank">Community</a>
                     </li>
