Added image for Jira v6 global setting access

--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
                     <p>The global settings are administrator settings and they manipulate how the plugin works.</p>
                     <p>
                         <h4>Accessing the global settings</h4> 
-                        <p>Global settings may be accessed only by the system administrators. The administrator can find the Global settings menu item on the Administrator page under the Plugins menu in the Timetracker submenu.</p>
-                        <img class="img-responsive img-thumbnail" src="images/jttp_global_settigns_access.png" alt="Global settings access" />
+                        <p>Global settings may be accessed only by the system administrators. The administrator can find the Global settings menu item on the Administrator page under the Plugins or Add-ons menu in the Timetracker submenu.</p>
+                        <img class="img-responsive img-thumbnail" src="images/jttp_global_settings_access.png" alt="Global settings access" />
+                        <img class="img-responsive img-thumbnail" src="images/jttp_global_settings_access_v6.png" alt="Global settings access" />
+
                         <p>
                             <h4>Non-Working issues</h4> The administrator can define a list that may contain issue keys and regular expressions. This list will be the list of non-working issues. The issues listed here are ignored when creating the Real Work Summary. By default, the Non-Working issues list is empty.
                             <h4>Non-Estimated issues</h4> The administrator can define a list that may contain issue keys and regular expressions. This list will be the list of Non-Estimated issues. The issues listed here do not trigger the appearance of the red exclamation mark and they are ignored when sending notification e-mails too. All the issues are non-estimated by default. This can be achieved by setting upf a .* regular expression. Example: To set up all the issues of MYPROJECT to be Non-estimated, the following regular expression needs to be used: “MYPROJECT-.*”.
