added improvement description into the 1.3.0 release notes

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
                     <li>The default Jira snytax (2h 30m) is now supported in the duration field. (<a href="https://github.com/everit-org/jira-timetracker-plugin/issues/32">#32</a>).</li>
                     <li>Added global setting to set the first day of the week in the calendar. (<a href="https://github.com/everit-org/jira-timetracker-plugin/issues/22">#22</a>).</li>
                     <li>The fields now remember their values when changing date or when form submission fails. (<a href="https://github.com/everit-org/jira-timetracker-plugin/issues/13">#13</a>).</li>
+					<li>So far the issue picker only offered cached issues but now it searches between all of the issues.</li>
                 </ul>
                 <h4 style="margin-left:15px;">New features</h4>
                 <ul>
