--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <h4 style="margin-left:20px;">Changes</h4>
                 <ul>
                     <li>License changed from LGPL 3.0 to Apache 2.0</li>
-                    <li>From now on the plugin requires Java 1.7</li>
+                    <li>From now on the plugin version 2.1.1 requires Java 1.7</li>
                 </ul>
 
                 <h3>Timetracker version 2.1.0 and 1.4.0</h3>
