Adding download information

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div class="container">
         <div class="col-md-10">
-
+            
             <div class="bs-docs-featurette cookbook" id="intoduction">
                 <h3 style="text-align:center">JIRA Timetracker Plugin enables its users to log their working hours in a fast and easy manner. The plugin provides users authenticated to JIRA with a simple and easy-to-use interface to manage their worklogs. By means of the plugin, worklogs may be created, modified or deleted.
                 </h3>
@@ -82,7 +82,7 @@
 
             <div class="bs-docs-featurette cookbook" id="login">
                 <h2>Login</h2>
-                <p>To use the plugin, it is necessary to log in to JIRA. After authentication, the plugin can be found amongst the Jira menu items by the name of Timetracker.
+                <p>To use the plugin, it is necessary to log into JIRA. After authentication, the plugin can be found amongst the Jira menu items by the name of Timetracker.
                 </p>
             </div>
             <hr class="featurette-divider">
@@ -296,6 +296,13 @@
             </div>
             <hr class="featurette-divider">
 
+            <div class="bs-docs-featurette cookbook" id="download">
+                <h2>Download</h2>
+                <p>The plugin can be downloaded or installed from <a href=https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin"">Atlassian Marketplace</a>.
+                </p>
+            </div>
+            <hr class="featurette-divider">
+
             <div class="bs-docs-featurette cookbook" id="release_notes">
                 <h2>Release notes</h2>
                 <h3>Timetracker version 2.1.1 and 1.4.1</h3>
@@ -451,6 +458,8 @@
                     <li><a href="#notification_email">Notification Email</a>
                     </li>
                     <li><a href="#error_messages">Error messages</a>
+                    </li>
+                    <li><a href="#download">Download</a>
                     </li>
                     <li><a href="#release_notes">Release notes</a>
                     </li>
