--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
             </div>
             <hr class="featurette-divider">
 
+            <div class="bs-docs-featurette cookbook" id="install">
+                <h2>Install</h2>
+                <p>The plugin can be downloaded or installed from <a href=https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin">Atlassian Marketplace</a>.
+                </p>
+            </div>
+            <hr class="featurette-divider">
+
             <div class="bs-docs-featurette cookbook" id="login">
                 <h2>Login</h2>
                 <p>To use the plugin, it is necessary to log into JIRA. After authentication, the plugin can be found amongst the Jira menu items by the name of Timetracker.
@@ -296,13 +303,6 @@
             </div>
             <hr class="featurette-divider">
 
-            <div class="bs-docs-featurette cookbook" id="download">
-                <h2>Download</h2>
-                <p>The plugin can be downloaded or installed from <a href=https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin"">Atlassian Marketplace</a>.
-                </p>
-            </div>
-            <hr class="featurette-divider">
-
             <div class="bs-docs-featurette cookbook" id="release_notes">
                 <h2>Release notes</h2>
                 <h3>Timetracker version 2.1.1 and 1.4.1</h3>
@@ -416,7 +416,8 @@
         <div class="col-md-2 col-sm-0 col-xs-0">
             <nav id="affix-nav">
                 <ul class="nav nav-pills nav-stacked everit-affix" data-spy="affix" data-offset-top="350" data-offset-bottom="140">
-
+                    <li><a href="#install">Install</a>
+                    </li>
                     <li class="active"><a href="#login">Login</a>
                     </li>
                     <li><a href="#interface">Timetracker plugin interface and input fields</a>
@@ -458,8 +459,6 @@
                     <li><a href="#notification_email">Notification Email</a>
                     </li>
                     <li><a href="#error_messages">Error messages</a>
-                    </li>
-                    <li><a href="#download">Download</a>
                     </li>
                     <li><a href="#release_notes">Release notes</a>
                     </li>
