Install link fix

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="bs-docs-featurette cookbook" id="install">
                 <h2>Install</h2>
-                <p>The plugin can be downloaded or installed from <a href=https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin">Atlassian Marketplace</a>.
+                <p>The plugin can be downloaded or installed from <a href="https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin">Atlassian Marketplace</a>.
                 </p>
             </div>
             <hr class="featurette-divider">
