Refactored page, so it uses shared resouces. Removed obsolete resources.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <link rel="icon" type="image/ico" href="fonts/favicon.ico">
 
 <!--    <link rel="stylesheet" type="text/css" href="common/css/base.css">-->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/docs.min.css" rel="stylesheet">
-<link href="css/everit.css" rel="stylesheet">
+<link href="http://www.everit.org/css/bootstrap.min.css" rel="stylesheet">
+<link href="http://www.everit.org/css/docs.min.css" rel="stylesheet">
+<link href="http://www.everit.org/css/everit.css" rel="stylesheet">
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push([ '_setAccount', 'UA-15041869-4' ]);
@@ -65,7 +65,7 @@
   <div class="bs-docs-masthead everit-header" id="content" role="main">
     <div class="container">
       <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"> <img
-        class="logo" src="fonts/sbz_e.svg" alt="E">
+        class="logo" src="http://www.everit.org/fonts/sbz_e.svg" alt="E">
       </span>
       <p class="lead">Jira Timetracker Plugin</p>
     </div>
@@ -655,9 +655,9 @@
   <!-- Bootstrap core JavaScript
 ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="js/jquery-2.1.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/everit.js "></script>
+  <script src="http://www.everit.org/js/jquery-2.1.1.min.js"></script>
+  <script src="http://www.everit.org/js/bootstrap.min.js"></script>
+  <script src="http://www.everit.org/js/everit.js "></script>
   <script type="text/javascript">
       (function() {
         var ga = document.createElement('script');
