Fixed the url of favicon.ico.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <head>
 <meta charset="utf-8">
 <title>Everit Timetracker Plugin</title>
-<link rel="icon" type="image/ico" href="fonts/favicon.ico">
+<link rel="icon" type="image/ico" href="http://www.everit.org/fonts/favicon.ico">
 
 <!--    <link rel="stylesheet" type="text/css" href="common/css/base.css">-->
 <link href="http://www.everit.org/css/bootstrap.min.css" rel="stylesheet">
