Change images and add analytics

--- a/index.html
+++ b/index.html
@@ -297,8 +297,7 @@
         <p>Global settings may be accessed only by the system administrators. The administrator
           can find the Global settings menu item on the Administrator page under the Plugins or
           Add-ons menu in the Timetracker submenu.</p>
-        <img class="img-responsive img-thumbnail" src="images/jttp_global_settings_access.png"
-          alt="Global settings access" /> <img class="img-responsive img-thumbnail"
+        <img class="img-responsive img-thumbnail"
           src="images/jttp_global_settings_access_v6.png" alt="Global settings access" />
 
         <p>
@@ -446,6 +445,13 @@
       </div>
       <hr class="featurette-divider">
 
+	  <div class="bs-docs-featurette cookbook" id="analytics">
+	    <h2>Analytics</h2>
+        <p>The Timetracker add-on collects anonymous usage data, which allows us to measure user experience. 
+		  All  sensitive data is encrypted before being uploaded.</p>
+	  </div>
+	  <hr class="featurette-divider">
+	  
       <div class="bs-docs-featurette cookbook" id="release_notes">
         <h2>Release notes</h2>
         <h3>Timetracker version 2.1.2</h3>
@@ -632,6 +638,7 @@
           <li><a href="#table_report">Table report</a></li>
           <li><a href="#notification_email">Notification Email</a></li>
           <li><a href="#error_messages">Error messages</a></li>
+		  <li><a href="#analytics">Analytics</a></li>
           <li><a href="#release_notes">Release notes</a></li>
         </ul>
       </nav>
