fix feedback imagename mispell

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 			     (We will not use your email for any other purpose and we will never share it with any third party company.)</li>
 		   </ul>		
         <img class="img-responsive img-thumbnail" src="images/jttp_feedback.png"
-          alt="Analytics" />
+          alt="Feedback" />
 	  </div>
 	  <hr class="featurette-divider">
 	  
