change image extension name, added issue links

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <p>There is a permission check in the query, so you will only see those projects in the
           chart which you have permisson to browse.</p>
         <img class="img-responsive img-thumbnail" src="images/jttp_table_report.png"
-          alt="Chart report" />
+          alt="Table report" />
       </div>
       <hr class="featurette-divider">
 
@@ -488,7 +488,8 @@
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
           <li>Fixed duration validation error.</li>
-          <li>Fixed labels missing for unsupported languages.</li>
+          <li>Fixed labels missing for unsupported languages. (<a
+            href="https://github.com/everit-org/jira-timetracker-plugin/issues/79">#79</a>)</li>
           <li>Fixed worklog text area style.</li>
           <li>Fixed parameter misspelling.</li>
           <li>Fixed change date and submit action, without logged work.</li>
@@ -506,7 +507,8 @@
 		<h3>Timetracker version 1.4.2</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
-          <li>Fixed labels missing for unsupported languages.</li>
+          <li>Fixed labels missing for unsupported languages. (<a
+            href="https://github.com/everit-org/jira-timetracker-plugin/issues/79">#79</a>)</li>
 		  <li>Fixed change date and submit action, without logged work.</li>
         </ul>
         <h4 style="margin-left: 20px;">Changes</h4>
