--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <html>
 
 <head>
-<meta charset="utf-8">
+<meta name="description" content="EverIT Timetracker plugin for Atlassian JIRA. 
+Easier, faster time tracking, and timelog reporting." charset="utf-8">
 <title>Everit Timetracker Plugin</title>
 <link rel="icon" type="image/ico" href="http://www.everit.org/fonts/favicon.ico">
 
@@ -34,6 +35,11 @@
   _gaq.push([ '_setDomainName', 'everit.org' ]);
   _gaq.push([ '_trackPageview' ]);
 </script>
+<style type="text/css">
+    .marketplace-badge {
+        padding-top:15px;
+    }
+</style>
 </head>
 
 <body class="bs-docs-home" data-spy="scroll" data-target="#affix-nav">
@@ -67,30 +73,31 @@
       <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"> <img
         class="logo" src="http://www.everit.org/fonts/sbz_e.svg" alt="E">
       </span>
-      <p class="lead">Jira Timetracker Plugin</p>
+      <p class="lead">Timetracker Plugin for JIRA</p>
     </div>
   </div>
   <div class="container">
     <div class="text-center text-danger" style="padding-top: 1em;">
-      Do you need Jira and OSGi developers? <strong>Daily rates start from 150 €!</strong> For more
+      Do you need JIRA and OSGi developers? <strong>Daily rates start from 150 €!</strong> For more
       information, please <a href="http://www.everit.biz#contact">contact us</a>!
     </div>
     <div class="col-md-10">
 
       <div class="bs-docs-featurette cookbook" id="intoduction">
-        <h3 style="text-align: center">JIRA Timetracker Plugin enables its users to log their
-          working hours in a fast and easy manner. The plugin provides users authenticated to JIRA
-          with a simple and easy-to-use interface to manage their worklogs. By means of the plugin,
-          worklogs may be created, modified or deleted.</h3>
+        <h3 style="text-align: center">Timetracker Plugin for JIRA enables its users to log their
+          working hours in a fast and easy manner. The plugin provides users a simple and easy-to-use 
+		  interface to manage their worklogs, and create useful reports from their worklog entries. 
+		  Worklogs can be created, modified, copied or deleted.</h3>
       </div>
       <hr class="featurette-divider">
 
       <div class="bs-docs-featurette cookbook" id="install">
         <h2>Install</h2>
         <p>
-          The plugin can be downloaded or installed from <a
-            href="https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin">Atlassian
-            Marketplace</a>.
+          The plugin can be downloaded or installed from Atlassian Marketplace.
+			<a href="https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin">
+			  <img class="img-responsive marketplace-badge" src="images/marketplace_available_dark_140x60.png" alt="Marketplace"/>
+			</a>
         </p>
       </div>
       <hr class="featurette-divider">
@@ -98,14 +105,27 @@
       <div class="bs-docs-featurette cookbook" id="login">
         <h2>Login</h2>
         <p>To use the plugin, it is necessary to log into JIRA. After authentication, the plugin
-          can be found amongst the Jira menu items by the name of Timetracker.</p>
+          can be found amongst the JIRA menu items by the name of Timetracker.</p>
+      </div>
+      <hr class="featurette-divider">
+	  
+	  <div class="bs-docs-featurette cookbook" id="menu">
+        <h2>Menu</h2>
+        <p>After installation you can see Timetracker menu in the JIRA top navigation bar. The menu has the following items:</p>
+		<ul>
+          <li><b>Timetracker</b> - After clicking on the Timetracker menu item, the plugin interface appears.</li>
+		  <li><b>Documentation</b> - This item navigates you to the Timetracker user guide page.</li>
+          <li><b>Administration</b> - This item is a shortcut to the Timetracker <a href="#global_settings">Global settings</a>. 
+		  The Administration option is only available for JIRA administrators.</li>          
+        </ul>
+		<img class="img-responsive img-thumbnail" src="images/jttp_menu.png"
+          alt="Menu" />
       </div>
       <hr class="featurette-divider">
 
       <div class="bs-docs-featurette cookbook" id="interface">
         <h2>Timetracker plugin interface and input fields</h2>
-        <p>After clicking on the Timetracker menu item, the plugin interface appears. The
-          interface consists of different parts: the date modification part, the worklog total part,
+        <p>The interface consists of different parts: the date modification part, the worklog total part,
           the worklog table part and the input fields.</p>
         <img class="img-responsive img-thumbnail" src="images/jttp_timetracker.png"
           alt="Timetracker" />
@@ -133,7 +153,7 @@
           from the first day of the month 00:00:00 to the last day of the month 23:59:59. The
           worklogs related to actual work are summarized below the worklog summary. This Real Work
           Summary contains only the time spent with actual work based on the worklogs that are not
-          related to non-working issues. The Real Work Summary uses Jira format (d h m) to display
+          related to non-working issues. The Real Work Summary uses JIRA format (d h m) to display
           the daily, weekly and monthly summaries.</p>
         <img class="img-responsive img-thumbnail" src="images/jttp_summary.png" alt=Summary />
 
@@ -143,10 +163,10 @@
         <ul>
           <li><b>Issue</b> - Issue code to which the worklog belongs. If the pointer hovered
             above the isseId, the issue description will appear. By clicking on it, the issue can be
-            viewed. Next to the issue code a red exclamation mark appears if it is not closed and if
-            there is no more estimated time assigned to it. If the issue is amongst the
-            non-estimated ones, then the exclamation mark does not appear.</li>
-		  <li><b>Remaining</b> - Remaining time on the issue in JIRA format (d h m).</li>
+            viewed. If it is closed, the Issue code get strikethrough.</li>
+		  <li><b>Remaining</b> - Remaining time on the issue in JIRA format (d h m). If Issue is not closed and if
+            there is no more estimated time assigned to it, the remaining time becomes red. If the Issue is closed,
+			the remaining time becomes grey.</li>
           <li><b>Start</b> - Start date of the worklog. Its format: hh:mm.</li>
           <li><b>End</b> - End date of the worklog: Its format: hh:mm.</li>
           <li><b>Duration</b> - Duration of the worklog; the time between the start and the end
@@ -190,17 +210,15 @@
             time.
             <ul>
               <li>By pressing the Now button first, the current time can be set as a
-                value.Pressing the Now button second and third times the button rounding function
+                value. Pressing the Now button second and third times the button rounding function
                 will round the time with the setted values first up then down.</li>
             </ul></li>
           <li><b>Duration</b> - Duration of the worklog. It is optional, but the End time or
             the Duration field has to be filled in. Its format: hh:mm or Xh XXm. The value cannot
             exceed the value of 24:00-Start Time.</li>
-          <li><b>Note</b> - The worklog description can be given in the note field. By default
-            the default note is “Default worklog description!”. The note input field handles the
-            text formatting annotations. <a
-            href="https://jira.atlassian.com/secure/WikiRendererHelpAction.jspa?section=all">Text
-              formatting help</a></li>
+          <li><b>Note</b> - The worklog description can be given in the note field. The note input field handles the 
+            <a href="https://jira.atlassian.com/secure/WikiRendererHelpAction.jspa?section=all">text formatting</a> annotations. 
+			The available toolbar appears on JIRA 6.4.x or later.</li>
         </ul>
         <p>
           The Issue and Note field can be copied from the <a href="#worklog_table">Worklog table</a>
@@ -243,7 +261,15 @@
       </div>
       <hr class="featurette-divider">
 
-      <div class="bs-docs-featurette cookbook" id="delete_worklogs">
+      <div class="bs-docs-featurette cookbook" id="copy_worklogs">
+        <h2>Copy Worklogs</h2>
+        <p>Worklogs belonging to a given day can be copied. After pressing the copy button the
+          worklog data are displayed with yellow background. You can now navigate to an other day 
+		  and copy the worklog data by clicking on the Submit button.</p>
+      </div>
+      <hr class="featurette-divider">
+	  
+	  <div class="bs-docs-featurette cookbook" id="delete_worklogs">
         <h2>Delete Worklogs</h2>
         <p>Worklogs belonging to a given day can be deleted. To do so, in the worklog table,
           after the worklog the Delete button needs to be pressed. Then, the worklog is deleted from
@@ -345,10 +371,12 @@
           00:00, whereas the date in the To field is considered till 23:59. By default, the value of
           the From field is a date being a month earlier than the current date, while the value of
           the To field is the current date.</p>
-        <p>The report lists the days where the worklogs spent time is less than 8 hours. This
-          report is available if the first checkbox is checked. An other options in this case if the
-          query not exclude the non-working issues, for this type of query the second checkbox have
-          to be checked. The second checkbox is blocked if the first one is not activated.</p>
+        <p>The report lists the days where the worklogs spent time is less than the 
+		<a href="https://confluence.atlassian.com/jira/configuring-time-tracking-185729592.html">configured</a> 
+		  numer of working hours per day. This report is available if the first checkbox is checked. 
+		  An other options in this case if the query not exclude the non-working issues, 
+		  for this type of query the second checkbox have to be checked. 
+		  The second checkbox is blocked if the first one is not activated.</p>
         <img class="img-responsive img-thumbnail" src="images/jttp_missing_days.png"
           alt="Missing days report" />
       </div>
@@ -379,7 +407,7 @@
         <p>With the help of the Table Report tab, a table is returned showing the saved worklogs
           between the given dates for the given user.</p>
         <p>
-          The displayed table contains the following data of the worklogs: Date, Issue key, Start
+          The displayed table contains the following data of the worklogs: Date, Issue key, Remaining, Start
           time, End time, Duration, Worklog note. <br> After each day/week/month there are a
           summary row which shows the total of the worklogs for the interval. <br> The "Real
           work" field does not count the projects defined at the <a href="#non_working_setting">Non-Working
@@ -461,6 +489,7 @@
 			 <li>Usage count of the Table Report</li>
 			 <li>User Agent of the browser being used</li>
 			 <li>Timetracker version number</li>
+			 <li>JIRA version number</li>
 		   </ul>
 		<p>This option is on by default, but you can switch it off on the Global settings page.</p>
 	  </div>
@@ -484,6 +513,28 @@
 	  
       <div class="bs-docs-featurette cookbook" id="release_notes">
         <h2>Release notes</h2>
+		<h3>Timetracker version 2.2.1</h3>
+		<h4 style="margin-left: 20px;">Bugfix</h4>
+        <ul>
+          <li>Fix text area under JIRA 6.4.x.</li>
+          <li>Show error message instead of errorpage if issue is in Done state, and work logging is prohibited.</li>
+          <li>Do not show error page if installed on JIRA without a project.</li>
+        </ul>
+        <h4 style="margin-left: 20px;">Changes</h4>
+        <ul>
+          <li>Respect JIRA Time Tracking Configuration. (<a
+            href=" https://github.com/everit-org/jira-timetracker-plugin/issues/133">#133</a>)
+		  </li>
+		  <li>Wrap long content.</li>
+          <li>Preservation of data on the pages.</li>
+          <li>Highlight worklog data when copying.</li>
+          <li>Change Timetracker error page.</li>
+          <li>If Issue is in Done state, the Issue code get strikethrough and the remaining time becomes grey.</li>          
+          <li>Add Remaining column to the Table Report.</li>
+          <li>New navigation menu. Add Administration and Documentation.</li>
+        </ul>
+		
+		
 		<h3>Timetracker version 2.2.0</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
@@ -577,7 +628,7 @@
         </ul>
         <h4 style="margin-left: 20px;">Improvements</h4>
         <ul>
-          <li>The default Jira snytax (2h 30m) is now supported in the duration field. (<a
+          <li>The default JIRA snytax (2h 30m) is now supported in the duration field. (<a
             href="https://github.com/everit-org/jira-timetracker-plugin/issues/32">#32</a>).
           </li>
           <li>Added global setting to set the first day of the week in the calendar. (<a
@@ -676,6 +727,7 @@
           data-offset-bottom="140">
           <li><a href="#install">Install</a></li>
           <li class="active"><a href="#login">Login</a></li>
+		  <li><a href="#menu">Menu</a></li>
           <li><a href="#interface">Timetracker plugin interface and input fields</a>
             <ul class="nav nav-pills nav-stacked">
               <li><a href="#date_modification">Date modification</a></li>
@@ -687,7 +739,8 @@
           <li><a href="#edit_worklogs">Edit worklogs</a>
             <ul class="nav nav-pills nav-stacked">
               <li><a href="#edit_all">Edit all function</a></li>
-            </ul></li>
+            </ul></li>			
+		  <li><a href="#copy_worklogs">Copy worklogs</a></li>
           <li><a href="#delete_worklogs">Delete worklogs</a></li>
           <li><a href="#settings">Settings</a>
             <ul class="nav nav-pills nav-stacked">
