--- a/index.html
+++ b/index.html
@@ -516,26 +516,24 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
 		<h3>Timetracker version 2.2.1</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
-          <li>Fix text area under JIRA 6.4.x.</li>
-          <li>Show error message instead of errorpage if issue is in Done state, and work logging is prohibited.</li>
-          <li>Do not show error page if installed on JIRA without a project.</li>
-        </ul>
-        <h4 style="margin-left: 20px;">Changes</h4>
-        <ul>
           <li>Respect JIRA Time Tracking Configuration. (<a
             href=" https://github.com/everit-org/jira-timetracker-plugin/issues/133">#133</a>)
 		  </li>
-		  <li>Wrap long content.</li>
-          <li>Preservation of data on the pages.</li>
-          <li>Highlight worklog data when copying.</li>
-          <li>Change Timetracker error page.</li>
-          <li>If Issue is in Done state, the Issue code get strikethrough and the remaining time becomes grey.</li>          
-          <li>Add Remaining column to the Table Report.</li>
-          <li>New navigation menu. Add Administration and Documentation.</li>
+		  <li>Fix text area under JIRA 6.4.x.</li>
+          <li>Show error message instead of errorpage if issue is in Done state, and work logging is prohibited.</li>
+          <li>Do not show error page if installed on JIRA without a project.</li>
         </ul>
-		
-		
-		<h3>Timetracker version 2.2.0</h3>
+		<h4 style="margin-left: 20px;">Improvements</h4>
+        <ul>		
+          <li>New navigation menu. Add Help and Administration item.</li>
+		  <li>Wrap long content.</li>
+		  <li>Preservation of data on the pages.</li>
+		  <li>Highlight worklog data when copying.</li>
+		  <li>If Issue is in Done state, the Issue code get strikethrough and the remaining time becomes grey.</li>
+		  <li>Add Remaining column to the Table Report.</li>
+		  <li>More informative error page.</li>
+        </ul>
+        <h3>Timetracker version 2.2.0</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
           <li>Fixed duration validation error.</li>
