cange title and meta, rename menu item, remove menu picture

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <html>
 
 <head>
-<meta name="description" content="EverIT Timetracker plugin for Atlassian JIRA. 
+<meta name="description" content="Everit Timetracker plugin for Atlassian JIRA. 
 Easier, faster time tracking, and timelog reporting." charset="utf-8">
-<title>Everit Timetracker Plugin</title>
+<title>Everit Timetracker Plugin for JIRA</title>
 <link rel="icon" type="image/ico" href="http://www.everit.org/fonts/favicon.ico">
 
 <!--    <link rel="stylesheet" type="text/css" href="common/css/base.css">-->
@@ -95,7 +95,7 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
         <h2>Install</h2>
         <p>
           The plugin can be downloaded or installed from Atlassian Marketplace.
-			<a href="https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin">
+			<a href="https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin" target="_blank">
 			  <img class="img-responsive marketplace-badge" src="images/marketplace_available_dark_140x60.png" alt="Marketplace"/>
 			</a>
         </p>
@@ -114,12 +114,10 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
         <p>After installation you can see Timetracker menu in the JIRA top navigation bar. The menu has the following items:</p>
 		<ul>
           <li><b>Timetracker</b> - After clicking on the Timetracker menu item, the plugin interface appears.</li>
-		  <li><b>Documentation</b> - This item navigates you to the Timetracker user guide page.</li>
+		  <li><b>Help</b> - This item navigates you to the Timetracker user guide page.</li>
           <li><b>Administration</b> - This item is a shortcut to the Timetracker <a href="#global_settings">Global settings</a>. 
 		  The Administration option is only available for JIRA administrators.</li>          
-        </ul>
-		<img class="img-responsive img-thumbnail" src="images/jttp_menu.png"
-          alt="Menu" />
+        </ul>		
       </div>
       <hr class="featurette-divider">
 
@@ -520,7 +518,7 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
             href=" https://github.com/everit-org/jira-timetracker-plugin/issues/133">#133</a>)
 		  </li>
 		  <li>Fix text area under JIRA 6.4.x.</li>
-          <li>Show error message instead of errorpage if issue is in Done state, and work logging is prohibited.</li>
+          <li>Show error message instead of error page if issue is in Done state, and work logging is prohibited.</li>
           <li>Do not show error page if installed on JIRA without a project.</li>
         </ul>
 		<h4 style="margin-left: 20px;">Improvements</h4>
