update for 2.3.1 bugfix

--- a/index.html
+++ b/index.html
@@ -511,6 +511,16 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
 	  
       <div class="bs-docs-featurette cookbook" id="release_notes">
         <h2>Release notes</h2>
+		<h3>Timetracker version 2.3.1</h3>
+		<h4 style="margin-left: 20px;">Bugfix</h4>
+        <ul>
+          <li>Use the fractions if they were specified in the JIRA Time Tracking Configuration. (<a
+            href=" https://github.com/everit-org/jira-timetracker-plugin/issues/133">#133</a>)		  
+        </ul>
+		<h4 style="margin-left: 20px;">Changes</h4>
+        <ul>		
+          <li>Feedback frequency session check.</li>		  
+        </ul>
 		<h3>Timetracker version 2.3.0</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
